2009-03-02  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* doc/flash.sgml: Fixed typos in a FLASH API listing.

2009-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/flash.h: Reinstate printf arg to cyg_flash_init, but it
	will now be officially required to be set to NULL.
	* src/flash.c (cyg_flash_init): Act on printf arg again (even though
	it's not meant to be non-NULL).
	* src/flashiodev.c (flashiodev_init): Call cyg_flash_init with NULL.
	* src/flashiodevlegacy.c (flashiodev_init): Ditto.
	* src/legacy_api.c (flash_init): Ditto.
	* doc/flash.sgml: Update cyg_flash_init as above, deprecating use of
	non-NULL parameter.

2009-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/flash.h: Modest API change: cyg_flash_init() no longer
	takes a printf function argument. Instead two new API functions
	are available: cyg_flash_set_printf() and
	cyg_flash_set_global_printf().
	
	* src/flash.c (CHATTER): Don't attempt output if printf function
	is NULL.
	(cyg_flash_init): No longer takes printf arg.
	(cyg_flash_set_printf): New. Set per-device printf function, locking
	if needed.
	(cyg_flash_set_global_printf): New. Set printf function for all
	devices, locking if needed.
	
	* src/flashiodev.c (flashiodev_init): cyg_flash_init no longer takes
	printf arg, and we can leave global printf at default.
	* src/flashiodevlegacy.c (flashiodev_init): Ditto.

	* src/legacy_api.c (flash_init): cyg_flash_init no longer takes
	printf arg. So call cyg_flash_set_global_printf as well.

	* src/legacy_dev.c (legacy_flash_init): legacy drivers can't handle
	NULL printf function, so provide a dummy.

	* doc/flash.sgml: Document removal of printf functionality of
	cyg_flash_init() and document cyg_flash_set_printf() and
	cyg_flash_set_global_printf().

2009-02-13  Bart Veer  <bartv@ecoscentric.com>

	* doc/flash.sgml: remove incomplete sentence.

	* cdl/io_flash.cdl: remove CYGHWR_IO_FLASH_DEVICE_NOT_IN_RAM, no
	longer needed.
